--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "framer-motion": "^11.11.0",
+    "framer-motion": "^11.11.7",
+    "lodash.capitalize": "^4.2.1",
     "pick-random": "^4.0.0",
+    "pick-random-weighted": "^2.0.0",
     "random": "^5.1.1",
+    "random-weight": "^1.1.1",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-uuid": "^2.0.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.13",
     "uuid": "^10.0.0",
     "web-vitals": "^4.2.3"
